RESOLVED FIXED253121
REGRESSION(257542@main): Video is misaligned in youtube.com's native PiP player after transitioning from full screen
https://bugs.webkit.org/show_bug.cgi?id=253121
Summary REGRESSION(257542@main): Video is misaligned in youtube.com's native PiP play...
Tim Nguyen (:ntim)
Reported 2023-02-28 15:50:58 PST
We're unintentionally leaving the fullscreen flag in this case even though we've exited fullscreen.
Attachments
Tim Nguyen (:ntim)
Comment 1 2023-02-28 15:53:02 PST
Tim Nguyen (:ntim)
Comment 2 2023-02-28 15:59:00 PST
Tim Nguyen (:ntim)
Comment 3 2023-02-28 15:59:33 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/38755
EWS
Comment 4 2023-02-28 18:33:29 PST
Committed 260985@main (d8b353380562): <https://commits.webkit.org/260985@main> Reviewed commits have been landed. Closing PR #10834 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.