Cherry-pick 260985@main (d8b353380562). https://bugs.webkit.org/show_bug.cgi?id=253121

REGRESSION(257542@main): Video is misaligned on YouTube site's PiP player after transitioning from full screen
    https://bugs.webkit.org/show_bug.cgi?id=253121
    rdar://105713729

    Reviewed by Ryosuke Niwa.

    There is a bug with the fullscreen spec that leaves a dangling fullscreen flag when moving elements: https://github.com/whatwg/fullscreen/issues/217
    This causes fullscreen styles to unintentionally apply on the YouTube site even though the player element which has moved in the DOM tree, has exited
    fullscreen.

    To fix this, we follow Chromium's pattern of running an extra "unfullscreen element" step in the synchronous exit fullscreen steps when the element to
    be exited is disconnected.

    * LayoutTests/imported/w3c/web-platform-tests/fullscreen/model/move-fullscreen-element-expected.txt: Added.
    * LayoutTests/imported/w3c/web-platform-tests/fullscreen/model/move-fullscreen-element.html: Added.
    * Source/WebCore/dom/FullscreenManager.cpp:
    (WebCore::FullscreenManager::exitFullscreen):

    Canonical link: https://commits.webkit.org/260985@main